<?xml version="1.0"?>
<package format="2">

  <name>object_detect</name>
  <version>1.0.0</version>
  <description>Package for detection and tracking of objects from a camera image (for the MBZIRC2020 competition)</description>

  <author email="vrbamato@fel.cvut.cz">Matouš Vrba</author>
  <maintainer email="vrbamato@fel.cvut.cz">Matouš Vrba</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>mrs_msgs</depend>
  <depend>mrs_lib</depend>
  <depend>nodelet</depend>
  <depend>image_transport</depend>

  <build_depend>message_generation</build_depend>

  <export>
    <nodelet plugin="${prefix}/object_detector_nodelet.xml" />
    generate_messages_cpp
  </export>

</package>
